ModelConfigs::getModelInfos returns Collection instead of Set ModelConfigs::getModelsName returns unmodifiableSet
Signed-off-by: lisrte <laurent.issertial@rte-france.com>